--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-03-09  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkimage.c (gtk_image_class_init): Fix a typo.
+
 	* gtk/gtkiconview.c (gtk_icon_view_set_model): Queue a resize 
 	when the model is unset.  (#169528, Tomislav Jonjic)
 
