--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-03-09  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkwidget.h (struct _GtkWidget): Typo fixes in comments.
+	(#169728, Morten Welinder, Owen Taylor)
+
 	* gtk/gtkwidget.c (gtk_widget_add_mnemonic_label): Fix a typo
 	in the docs.  (#169729, Morten Welinder)
 
