--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-09  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/tmpl/gtkwidget.sgml: Typo fixes. 	(#169728, 
+	Morten Welinder, Owen Taylor)
+
 2005-02-27  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/tmpl/gtktreemodel.sgml: Fix stack vs heap 
