--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-09  Matthias Clasen  <mclasen@redhat.com>
+
+	* io-gif-animation.c (gdk_pixbuf_gif_anim_frame_composite): Fix 
+	a C99ism.  (#169741, Morten Welinder)
+
 2005-03-08  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk-pixbuf.c (gdk_pixbuf_class_init): Use canonical
