--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-03-10  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkdialog.c (gtk_dialog_map): Don't
+	try to focus the default_widget if there is 
+	none.  (#169881, Thomas Leonard)
+
 2005-03-09  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkaccelgroup.c (substitute_underscores): Remove
