--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-11  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkaboutdialog.c (add_credits_page): Don't crash on
+	style changes.  (#169334, Yury Puzis)
+
 2005-03-12  Ivan, Wong Yat Cheung  <email@ivanwong.info>
 
 	Big window fix for Win32. Big windows are still emulated within
