--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-13  David Lodge <dave@cirt.net>
+
+	* en_GB.po: Updated British translation.
+
 2005-03-08  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* da.po: Updated Danish translation.
