Updated Canadian English translation.
	* en_CA.po: Updated Canadian English translation.

--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -1,7 +1,7 @@
 # Canadian English translation of gtk+
 # Copyright (C) 2004 Adam Weinberger and the GNOME Foundation
 # This file is distributed under the same licence as the gtk+ package.
-# Adam Weinberger <adamw@FreeBSD.org>, 2004.
+# Adam Weinberger <adamw@gnome.org>, 2004.
 # 
 # 
 msgid ""
