Make inline completion insert the prefix at the right spot. (#170146, Doug
2005-03-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentrycompletion.c (gtk_entry_completion_real_insert_prefix):
	Make inline completion insert the prefix at the
	right spot.  (#170146, Doug Quale)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-03-17  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkentrycompletion.c (gtk_entry_completion_real_insert_prefix): 
+	Make inline completion insert the prefix at the
+	right spot.  (#170146, Doug Quale)
+
 2005-03-17  Tor Lillqvist  <tml@novell.com>
 
 	* gdk/gdkkeynames.c: gdk_key is a typedef, not a struct tag.
