--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-03-17  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkicontheme.c (theme_lookup_icon): Don't crash
+	if there is no cache.  (#170652, Diego Gonzalez)
+	
 	* gtk/gtkentrycompletion.c (gtk_entry_completion_real_insert_prefix): 
 	Make inline completion insert the prefix at the
 	right spot.  (#170146, Doug Quale)
